tests/testdata/nonmem/errors/no_header_error_only_iter.ext
  -1000000000  1.00000E-02  1.00000E+00  1.35800E+02  1.00000E-02  5.00000E-02  9.00000E-02  1.00000E-01  1.00000E-02  1.00000E-01    1.3407807929942596E+154
  -1000000006  0.00000E+00  0.00000E+00  0.00000E+00  0.00000E+00  0.00000E+00  0.00000E+00  0.00000E+00  0.00000E+00  0.00000E+00    0.0000000000000000
  -1000000007  0.00000E+00  0.00000E+00  0.00000E+00  0.00000E+00  0.00000E+00  0.00000E+00  0.00000E+00  0.00000E+00  0.00000E+00    0.0000000000000000